src/components/layout/stats/Stats.css
li {
  list-style: none;
}

ul {
  margin: auto 0;
}

hr {
  width: 90%;
  border: 1px solid var(--divider);
  border-radius: var(--br)
}

.stats-section {
  display: none;
  background-color: var(--bg);
  color: white;
  border-radius: var(--br);
}


.ascii-logo {
  font-family: 'Roboto Mono', monospace;
  font-style: italic;
  font-size: 0.7rem;
  user-select: none;
}

.stats-section::-webkit-scrollbar {
  width: 0px;
}

.button {
  cursor: pointer;
  font-family: 'Roboto', sans-serif;
  line-height: 0;
  font-size: 0.875rem;
  background-color: var(--btn-bg);
  color: var(--btn-txt);
  border: none;
  padding: 1rem;
  border-radius: 2px;
  box-shadow:
    0px 2px 2px rgba(0, 0, 0, 0.25);

}

.stats {
  margin-bottom: auto;
  font-size: 1.2rem;
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  gap: 1.2ch;
}

.stats-section>small {
  font-family: 'Roboto Mono', monospace;
  color: black;
  margin-bottom: 1.5rem;
}


@media only screen and (min-width: 820px) {
  .stats-section {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    gap: 1.5rem;
    overflow-y: auto;
    scrollbar-width: 0px;
    grid-row: 2;
  }

}

@media only screen and (min-width: 1300px) {}

